--- a/RobotControl/app/src/main/AndroidManifest.xml
+++ b/RobotControl/app/src/main/AndroidManifest.xml
@@ -13,12 +13,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission
+        android:name="android.permission.NEARBY_WIFI_DEVICES"
+        android:usesPermissionFlags="neverForLocation"
+        tools:targetApi="33" />
 
     <uses-feature android:name="android.hardware.bluetooth" android:required="false" />
     <uses-feature android:name="android.hardware.wifi" android:required="false" />
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -61,6 +66,13 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+        
+        <!-- Robot Control Activity -->
+        <activity
+            android:name=".RobotControlActivity"
+            android:exported="false"
+            android:label="Robot WiFi Control"
+            android:parentActivityName=".MainActivity" />
         
         <!-- Education Activity -->
         <activity
