--- a/RobotControl/app/src/main/AndroidManifest.xml
+++ b/RobotControl/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
     <uses-feature android:name="android.hardware.wifi" android:required="false" />
 
     <application
+        android:name=".RobotControlApp"
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -61,6 +62,13 @@
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
+
+        <!-- App Settings Activity -->
+        <activity
+            android:name=".AppSettingsActivity"
+            android:exported="false"
+            android:label="@string/app_settings"
+            android:parentActivityName=".MainActivity" />
         
         <!-- Main Dashboard Activity -->
         <activity
