Refactor UI strings and layouts for localization support
- Updated text in activity_education.xml to use string resources for title and subtitle.
- Modified activity_main_dashboard.xml to replace hardcoded strings with string resources for various UI elements.
- Changed activity_robot_control.xml to utilize string resources for titles and status messages.
- Revised fragment_quiz.xml to implement string resources for quiz titles, questions, and options.
- Adjusted item_device.xml to change icon tint color to a lighter primary color.
- Cleaned up themes.xml by removing commented-out colorPrimary item.
- Added new language preference options in arrays.xml for English, French, and Spanish.
- Expanded strings.xml to include new localized strings for dashboard, quiz, and education sections.
- Created Spanish and French translations for quiz questions and options in quiz_arrays.xml.
- Added Spanish and French translations for all strings in strings.xml.
- Implemented language preference in preferences_app.xml to allow users to select app language.
- Updated gradle.properties to use Android Studio bundled JBR for builds.

--- a/RobotControl/app/src/main/AndroidManifest.xml
+++ b/RobotControl/app/src/main/AndroidManifest.xml
@@ -79,14 +79,14 @@
         <activity
             android:name=".RobotControlActivity"
             android:exported="false"
-            android:label="Robot WiFi Control"
+            android:label="@string/robot_wifi_control_label"
             android:parentActivityName=".MainActivity" />
         
         <!-- Education Activity -->
         <activity
             android:name=".EducationActivity"
             android:exported="false"
-            android:label="Learn Robotics"
+            android:label="@string/education_activity_label"
             android:parentActivityName=".MainActivity" />
         
         <!-- Auto Reconnect Service -->
