Add RobotListActivity and update launcher icons for themed support

--- a/RobotControl/app/src/main/AndroidManifest.xml
+++ b/RobotControl/app/src/main/AndroidManifest.xml
@@ -74,6 +74,12 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
+        <!-- Robot List Activity -->
+        <activity
+            android:name=".RobotListActivity"
+            android:exported="false"
+            android:label="@string/my_robots" />
         
         <!-- Robot Control Activity -->
         <activity
